# accounts/src/main/java/avlyakulov/timur/accounts/dto/ErrorResponseDto.java
@@ -1,6 +1,5 @@
 package avlyakulov.timur.accounts.dto;
 
-import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -9,34 +8,18 @@ import org.springframework.http.HttpStatus;
 
 import java.time.LocalDateTime;
 
-@Schema(
-        name = "ErrorResponse",
-        description = "Schema to hold error response information"
-)
 @Getter
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
 public class ErrorResponseDto {
 
-    @Schema(
-            description = "API path invoked by client"
-    )
     private String apiPath;
 
-    @Schema(
-            description = "Error code representing the error happened"
-    )
     private HttpStatus errorCode;
 
-    @Schema(
-            description = "Error message representing the error happened"
-    )
     private String errorMessage;
 
-    @Schema(
-            description = "Error message when the error happened"
-    )
     private LocalDateTime errorTime;
 
 
